minor changes for avoiding horizontal scroll

--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -31,7 +31,7 @@
 
     @include desktop {
       // justify-content: space-between;
-      column-gap: 152px;
+      column-gap: 150px;
       align-items: center;
     }
   }
